[package]
name = "weather"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features=["json"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.96"
structopt = "0.3.26"
tokio = { version = "1.28.2", features = ["full"]}
